<resources>
    <string name="app_name">Punto de Venta</string>
    <string name="version">Versión:</string>
    <string name="info_version">\2019 - Paga Todo</string>
    <string name="footer_version">\Todos los Derechos Reservados.</string>
    <string name="action_bag">Bag</string>
    <string name="chance_title">Chance</string>
    <string name="login_title">Apuestas Gelsa</string>
    <string name="maxichance_title">Maxi Chance</string>
    <string name="superchance_title">Súper Chance</string>
    <string name="reportsales_title">Reporte de Ventas</string>
    <string name="currentbox_title">Cuadre Actual</string>
    <string name="recharge_title">Recargas y Paquetes</string>
    <string name="stub_title">Selección de Colilla</string>
    <string name="recharge_history_title">Consulta Recargas</string>
    <string name="recharge_history_title_pdv">Consulta de recargas</string>
    <string name="history_wallet">Consultar Cartera</string>
    <string name="change_password">CAMBIAR CONTRASEÑA</string>
    <string name="pay_millionaire_title">Paga Millonario</string>
    <string name="paymillionaire_menu_title">Paga Millonario</string>
    <string name="device_menu_title">Dispositivo</string>
    <string name="baloto_winners_menu_title">Baloto ganadores</string>
    <string name="advisor_menu_title">Asesor</string>
    <string name="query_menu_title">Consultas y premios</string>
    <string name="sporting_menu_title">Las Deportivas</string>
    <string name="lottery_result_title">Resultado Loterías y Sorteos</string>
    <string name="lottery_result_title_secos">Resultados secos loteria</string>
    <string name="chance_menu_title">Chance</string>
    <string name="chance_placeholder_suggested">$ Valor a apostar</string>
    <string name="betplay_menu_title">BetPlay</string>
    <string name="baloto_menu_title">Baloto</string>
    <string name="sports_menu_title">Las Deportivas</string>
    <string name="superastro_menu_title">SUPER astro</string>
    <string name="betplay_title">BetPlay</string>
    <string name="betplay_recharge_title">BetPlay Recarga</string>
    <string name="betplay_reprint_title">BetPlay Reimpresión</string>
    <string name="betplay_collect_title">BetPlay Cobro-Retiro</string>
    <string name="betplay_pin_title">BetPlay Generar PIN</string>
    <string name="betplay_quick_bet_title">BetPlay Apuesta Rápida</string>
    <string name="baloto_result_title">Baloto resultados</string>
    <string name="revenge_result_title">Revancha resultados</string>
    <string name="superastro_title">SUPER astro</string>
    <string name="league_14_title">Liga 14</string>
    <string name="megagoal_title">MegaGol</string>
    <string name="home_menu_title">Menú Principal</string>
    <string name="lottery_title">Loterías</string>
    <string name="virtual_lottery_title">Lotería Virtual</string>
    <string name="physical_lottery_title">Lotería Física</string>
    <string name="title_view_raffles">Rifas</string>
    <string name="title_view_baloto">Baloto</string>
    <string name="title_view_baloto_history">Histórico Baloto</string>
    <string name="title_view_baloto_result_draw">Resultados por sorteo</string>
    <string name="megagol_title">MegaGol</string>
    <string name="promotionals_menu_title">Promocionales</string>
    <string name="dataphone_title_in_session">Información del datáfono</string>
    <string name="device_title_in_session">Información del dispositivo</string>
    <string name="dataphone_title">Información</string>
    <string name="reset_password">Cambio de clave</string>
    <string name="reset_passwor_title">Cambiar Contraseña</string>
    <string name="wallet_title">Cartera</string>
    <string name="query_winners_title">Consultar ganadores</string>
    <string name="lotteries_result_title">Resultado de loterías</string>
    <string name="accumulated_baloto_title">Baloto acumulado</string>
    <string name="accumulated_baloto_subtitle">Acumulados</string>
    <string name="title_virtual_wallet">Recarga de Mi Saldo app Paga Todo</string>
    <string name="colpensiones_beps_title">Colpensiones BEPS</string>
    <string name="reprit_colpensiones_beps_title">Reimpresión Colpensiones BEPS</string>
    <string name="pay_bills">Pago de facturas</string>
    <string name="text_modalities">Modalidades</string>
    <string name="text_bet_equal">Apostado:</string>
    <string name="text_iva_equal">IVA:</string>
    <string name="text_iva_empty">$0</string>
    <string name="text_paid_equal">Pagado:</string>
    <string name="text_suggested_equal">Sugerido:</string>
    <string name="text_draw_date_equal">Fecha de Sorteo:</string>
    <string name="text_lottery_result_select">Seleccionar Lotería:</string>
    <string name="text_lottery_result_seco_select">Selecciona Seco:</string>
    <string name="text_aleatorio">Aleatorio</string>
    <string name="text_repeat">Repetir última apuesta</string>
    <string name="text_generate_random_numbers">Aleatorio</string>
    <string name="text_title_recharge">Digita los siguientes datos</string>
    <string name="text_title_reprint_betplay">Reimpresión BetPlay</string>
    <string name="text_title_collect_betplay">Cobro / Retiro </string>
    <string name="text_title_generate_pin_betplay">Generar PIN para retiro</string>
    <string name="text_title_quick_bet_betplay">Generar Apuesta Rápida</string>
    <string name="text_subtitle_collect_betplay">Confirma la siguiente información para realizar el retiro</string>
    <string name="text_title_maxichance">Juego</string>
    <string name="text_title_lotteries">Loterías</string>
    <string name="text_operator">Operador</string>
    <string name="text_package">Paquete (opcional)</string>
    <string name="text_number">Número</string>
    <string name="text_title_baloto">Baloto</string>
    <string name="text_winner_ticket">Tiquete ganador</string>
    <string name="text_award_value">Valor premio</string>
    <string name="text_title_colpensiones_beps">Recaudo - Colpensiones BEPS</string>
    <string name="text_title_document_type">Tipo de documento</string>
    <string name="text_title_document_number">Número de documento</string>
    <string name="text_title_birthdate_day_month">Día / Mes nacimiento</string>
    <string name="text_title_input_value">Valor aporte</string>
    <string name="text_title_confirmation_input_value">Confirmar valor aporte</string>
    <string name="text_title_phone_number">Número telefónico</string>
    <string name="text_title_reprint_colpensiones_beps">Reimpresión Colpensiones BEPS</string>
    <string name="text_title_transaction_type">Tipo de transacción</string>
    <string name="text_title_transaction_number">Número transacción</string>
    <string name="text_title_device_printers">Selecciona las impresoras</string>
    <string name="text_label_select_printer">Selecciona una impresora</string>
    <string name="text_jsa_printer">Impresora para JSA</string>
    <string name="text_other_product_printer">Impresora otros productos</string>
    <string name="text_agreements">Convenios</string>
    <string name="text_bar_code">Referencia</string>
    <string name="text_user_code">Código de usuario</string>
    <string name="text_client_number">Número de cliente</string>
    <string name="text_account_number">Número de cuenta</string>
    <string name="text_cc">Cédula de ciudadanía</string>
    <string name="text_ref_payment">Referencia de pago</string>
    <string name="text_select_internal_print">Impresora Interna</string>
    <string name="text_draw_number">N° sorteo:</string>
    <string name="text_draw_date">Fecha sorteo:</string>
    <string name="text_game_result">Resultado juego:</string>
    <string name="text_label_draw_number">Sorteo</string>
    <string name="text_label_draw_date">Fecha</string>
    <string name="text_label_game_result">Resultado</string>
    <string name="text_label_draw_not_fount">-</string>
    <string name="text_label_div">DIV</string>
    <string name="text_label_winners">N° GANADORES</string>
    <string name="text_number_phone">Número de teléfono</string>
    <string name="text_advisor_code">Código asesor</string>
    <string name="text_check_date">Fecha consulta</string>
    <string name="text_enter_number">Digita el número de juego</string>
    <string name="text_enter_number_init">Digita el rango inicial</string>
    <string name="text_enter_number_final">Digita el rango final</string>
    <string name="text_confirm_number">Confirmar número de teléfono</string>
    <string name="text_confirm_echarge_number">Confirmar número</string>
    <string name="text_recharge_value">Valor recarga</string>
    <string name="text_recharge_value_confirm">Confirmar valor</string>
    <string name="text_numberid_betplay">Número de Documento</string>
    <string name="text_numberid_confirm_betplay">Confirmar número de Documento</string>
    <string name="text_title_communication">Información de comunicación</string>
    <string name="text_title_information_imei">Información IMEI</string>
    <string name="text_title_information_branch_office">Información sucursal</string>
    <string name="unique_serial">Serial único</string>
    <string name="enter_seria_unique">Digita el número serial único</string>
    <string name="text_label_parameter_apn">APN: %1$s</string>
    <string name="text_label_parameter_imei">Imei terminal: %1$s</string>
    <string name="text_title_information_print_device">Impresora</string>
    <string name="text_label_parameter_select_print_device">Seleccionar impresora</string>
    <string name="text_label_parameter_advisor">Asesor: %1$s</string>
    <string name="text_label_parameter_municipality">Municipio: %1$s</string>
    <string name="text_label_parameter_office">Oficina: %1$s</string>
    <string name="text_label_parameter_salepoint">Punto de venta: %1$s</string>
    <string name="text_label_parameter_serie_1">Serie 1: %1$s</string>
    <string name="text_label_parameter_serie_2">Serie 2: %1$s</string>
    <string name="placeholder_numberid">Digita el número de cédula</string>
    <string name="placeholder_numberid_confirm">Confirma el número de cédula</string>
    <string name="placeholder_value_recharge">Valor a recargar</string>
    <string name="placeholder_value_recharge_confirm">Confirmar valor a recargar</string>
    <string name="text_btn_back">&#60; ATRÁS</string>
    <string name="text_btn_reprint_arrow">&#62; REIMPRIMIR</string>
    <string name="message_error_value_recharge">Digita el valor a recargar</string>
    <string name="message_error_numberid">Digita el número de cédula</string>
    <string name="message_error_numberid_confirm">Confirma el número de cédula</string>
    <string name="message_error_value_confirm_empty">Confirma el valor a recargar</string>
    <string name="message_error_value_not_equal">Los valores no coinciden</string>
    <string name="message_error_numberid_not_equal">Los números de cédula no coinciden</string>
    <string name="serie_one">Serie 1</string>
    <string name="serie_two">Serie 2</string>
    <string name="enter_serie_one">Digita la serie 1</string>
    <string name="enter_serie_two">Digita la serie 2</string>
    <string name="digits_words_and_numbers">1234567890abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="digits_words_and_numbers_uppercase">1234567890ABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="giro_reprint_notes_title">Reimprimir factura</string>
    <string name="giro_reprint_type_bill">Tipo de factura</string>
    <string name="giro_reprint_placeholder_type_bill">Selecciona el tipo de factura</string>
    <string name="giro_reprint_reference_number">PIN (Referencia)</string>
    <string name="giro_reprint_placeholder_reference_number">Digita el número PIN</string>
    <string name="giro_reprint_error_refence">Pin obligatorio</string>
    <string name="giro_reprint_error_type_bill">Tipo de factura obligatorio</string>
</resources>