<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".views.information.InformationDeviceActivity">

    <include
        layout="@layout/main_toolbar"
        android:id="@+id/mainToolbar"/>

    <TextView
        android:text="@string/text_title_communication"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_16"
        style="@style/Text.Title5"/>
    <TextView
            android:id="@+id/labelAPN"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/text_label_parameter_apn"
        style="@style/Text.Label"/>

    <TextView
        android:text="@string/text_title_information_imei"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_marginStart="@dimen/dimen_16"
        style="@style/Text.Title5"/>
    <TextView
        android:id="@+id/labelImei"
        android:layout_marginTop="@dimen/dimen_16"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/text_label_parameter_imei"
        style="@style/Text.Label"/>
    <TextView
        android:id="@+id/labelSimSerialNumber"
        android:layout_marginTop="@dimen/dimen_8"
        android:layout_marginStart="@dimen/dimen_16"
        android:layout_marginEnd="@dimen/dimen_16"
        android:text="@string/text_label_parameter_imei"
        style="@style/Text.Label"/>

    <LinearLayout
        android:id="@+id/layoutInfoBranchOffice"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginTop="@dimen/dimen_24"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:text="@string/text_title_information_branch_office"
            android:layout_marginStart="@dimen/dimen_16"
            style="@style/Text.Title5"/>
        <TextView
            android:id="@+id/labelAdvisor"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/text_label_parameter_advisor"
            style="@style/Text.Label"/>
        <TextView
            android:id="@+id/labelMunicipality"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/text_label_parameter_municipality"
            style="@style/Text.Label"/>
        <TextView
            android:id="@+id/labelOffice"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/text_label_parameter_office"
            style="@style/Text.Label"/>
        <TextView
            android:id="@+id/labelSalePoint"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/text_label_parameter_salepoint"
            style="@style/Text.Label"/>
        <TextView
            android:id="@+id/labelSerie1"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/text_label_parameter_serie_1"
            style="@style/Text.Label"/>
        <TextView
            android:id="@+id/labelSerie2"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/text_label_parameter_serie_2"
            style="@style/Text.Label"/>
    </LinearLayout>

    <LinearLayout android:id="@+id/container_print"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:text="@string/text_title_information_print_device"
            android:layout_marginTop="@dimen/dimen_24"
            android:layout_marginStart="@dimen/dimen_16"
            style="@style/Text.Title5"/>

        <LinearLayout
            android:id="@+id/layoutSpinnerPrinters"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:padding="4dp"
            android:background="@drawable/txt_background_active"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

             <com.jaredrummler.materialspinner.MaterialSpinner
                 android:id="@+id/spinnerSelectPrinter"
                 app:ms_padding_left="@dimen/dimen_8"
                 app:ms_padding_right="@dimen/dimen_8"
                 app:ms_padding_bottom="@dimen/zero"
                 app:ms_padding_top="@dimen/zero"
                 app:ms_arrow_tint="@color/colorRedButton"
                 app:ms_text_color="@color/colorGrayLight"
                 app:ms_hint_color="@color/colorGrayLight3"
                 android:textSize="@dimen/font_14"
                 android:hint="@string/text_label_parameter_select_print_device"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/dimen_42"/>

         </LinearLayout>

    </LinearLayout>

</LinearLayout>
