<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        tools:context="co.com.pagatodo.core.views.betplay.BetplayActivity">

    <include
            android:id="@+id/mainToolbar"
            layout="@layout/main_toolbar" />

    <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/dimen_24">

            <TextView
                    android:id="@+id/lblTitle"
                    style="@style/Text.Title5.Margin"
                    android:text="@string/text_title_recharge" />

            <TextView
                    android:id="@+id/labelNumberId"
                    style="@style/Text.Label"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/text_numberid_betplay" />

            <co.com.pagatodo.core.util.EditTextNoCopyPaste
                    android:id="@+id/txtNumberId"
                    style="@style/EditText.Field.Document"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:hint="@string/placeholder_numberid"
                    android:imeOptions="actionNext"
                    tools:ignore="Autofill" />

            <TextView
                    android:id="@+id/labelErrorNumberId"
                    style="@style/Text.Error.Label"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/message_error_numberid"
                    android:visibility="gone" />

            <TextView
                    android:id="@+id/labelNumberIdConfirm"
                    style="@style/Text.Label"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/text_numberid_confirm_betplay" />

            <co.com.pagatodo.core.util.EditTextNoCopyPaste
                    android:id="@+id/txtNumberIdConfirm"
                    style="@style/EditText.Field.Document"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:hint="@string/placeholder_numberid_confirm"
                    android:imeOptions="actionNext"
                    tools:ignore="Autofill" />

            <TextView
                    android:id="@+id/labelErrorNumberIdConfirm"
                    style="@style/Text.Error.Label"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/message_error_numberid_confirm"
                    android:visibility="gone" />

            <TextView
                    android:id="@+id/labelErrorNumberIdNotEqual"
                    style="@style/Text.Error.Label"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/message_error_numberid_not_equal"
                    android:visibility="gone" />

            <TextView
                    android:id="@+id/labelValueRecharge"
                    style="@style/Text.Label"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/text_recharge_value" />

            <co.com.pagatodo.core.util.EditTextNoCopyPaste
                    android:id="@+id/txtValueRecharge"
                    style="@style/EditText.Field.Document"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:hint="@string/placeholder_value_recharge"
                    android:imeOptions="actionNext"
                    android:maxLength="10"
                    tools:ignore="Autofill" />

            <TextView
                    android:id="@+id/labelErrorValueRecharge"
                    style="@style/Text.Error.Label"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/message_error_value_recharge"
                    android:visibility="gone" />

            <TextView
                    android:id="@+id/labelValueRechargeConfirm"
                    style="@style/Text.Label"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_16"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/text_recharge_value_confirm" />

            <co.com.pagatodo.core.util.EditTextNoCopyPaste
                    android:id="@+id/txtValueRechargeConfirm"
                    style="@style/EditText.Field.Document"
                    android:layout_marginStart="@dimen/dimen_16"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:hint="@string/placeholder_value_recharge_confirm"
                    android:imeOptions="actionDone"
                    android:maxLength="10"
                    tools:ignore="Autofill" />

            <TextView
                    android:id="@+id/labelErrorValueRechargeConfirm"
                    style="@style/Text.Error.Label"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/message_error_value_confirm_empty"
                    android:visibility="gone" />

            <TextView
                    android:id="@+id/labelErrorValueRechargeNotEqual"
                    style="@style/Text.Error.Label"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen_8"
                    android:layout_marginEnd="@dimen/dimen_16"
                    android:text="@string/message_error_value_not_equal"
                    android:visibility="gone" />

            <include
                    layout="@layout/layout_buttons_back_next"
                    android:layout_width="match_parent"
                    android:layout_marginTop="@dimen/dimen_36"
                    android:layout_height="wrap_content"
                    android:layout_alignParentBottom="true" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
