<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context="co.com.pagatodo.core.views.giro.GiroReprintFragment">

    <LinearLayout
        android:layout_alignParentTop="true"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <TextView
            style="@style/Text.Title5.Margin"
            android:text="@string/giro_reprint_notes_title" />

        <TextView
            style="@style/Text.Label"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/giro_reprint_type_bill" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:background="@drawable/txt_background_active"
            android:padding="2dp">

            <com.jaredrummler.materialspinner.MaterialSpinner
                android:id="@+id/spinnerTypeBill"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dimen_42"
                android:hint="@string/giro_reprint_placeholder_type_bill"
                app:ms_arrow_tint="@color/colorRedButton"
                app:ms_padding_bottom="@dimen/zero"
                app:ms_padding_left="@dimen/dimen_8"
                app:ms_padding_right="@dimen/dimen_8"
                app:ms_padding_top="@dimen/zero" />
        </LinearLayout>

        <TextView
            android:id="@+id/labelErrorTypeBill"
            style="@style/Text.Error.Label"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/giro_reprint_error_type_bill"
            android:visibility="gone" />

        <TextView
            style="@style/Text.Label"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/giro_reprint_reference_number" />

        <EditText
            android:id="@+id/txtReferenceNumber"
            style="@style/EditText.Field.Phone"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:hint="@string/giro_reprint_placeholder_reference_number"
            android:inputType="number|phone"
            android:imeOptions="actionDone"
            android:maxLength="20"
            android:paddingStart="@dimen/dimen_16"
            android:paddingEnd="@dimen/dimen_16"
            tools:ignore="Autofill" />

        <TextView
            android:id="@+id/labelErrorReferenceNumber"
            style="@style/Text.Error.Label"
            android:layout_gravity="end"
            android:layout_marginTop="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:text="@string/giro_reprint_error_refence"
            android:visibility="gone" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:layout_alignParentBottom="true"
        android:paddingTop="@dimen/dimen_16"
        android:paddingBottom="@dimen/dimen_16"
        android:weightSum="1">

        <Button
            android:id="@+id/btnBack"
            style="@style/StyleCancelButton"
            android:layout_marginStart="@dimen/dimen_16"
            android:layout_marginEnd="@dimen/dimen_8"
            android:layout_weight=".5"
            android:text="@string/text_btn_back" />

        <Button
            android:id="@+id/btnSave"
            style="@style/StyleConfirmButton"
            android:layout_marginStart="@dimen/dimen_8"
            android:layout_marginEnd="@dimen/dimen_16"
            android:layout_weight=".5"
            android:text="@string/text_btn_reprint_arrow" />
    </LinearLayout>



</RelativeLayout>
